--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,7 @@ repository = "https://github.com/rustic-music-player/qt-frontend"
 homepage = "https://github.com/rustic-music-player/qt-frontend"
 
 [dependencies]
-
-[dependencies.qmetaobject]
-path = "../qmetaobject-rs/qmetaobject" # TODO: Install from git
+qmetaobject = "0.0.5"
 
 [dependencies.rustic-core]
-git = "https://github.com/rustic-music-player/core"
+path = "../../core"
